# mDNS

./: .gitignore  Cargo.toml  README.md  config.toml
src/client/: client.rs
src/server/: mdns.rs  server.rs  settings.rs
